heb mijn naam toegevoegd.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-
+Hallo mijn naam is Misha.
   </body>
 </html>
