--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-Hallo mijn naam is Misha.
-  </body>
+<h1>
+  Hello, Code School!
+</h1>
+<ul>
+<li>I want to get PHP.</li>
+</ul>
+
+</body>
 </html>
