--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title> Misha </title>
   </head>
   <body>
 <h1>
@@ -11,6 +12,7 @@
 </h1>
 <ul>
 <li>I want to get PHP.</li>
+<li>I want to learn SQL.</li>
 </ul>
 
 </body>
