--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title> Misha </title>
+<title> Misha </title>
   </head>
   <body>
 <h1>
-  Hello, Code School!
+'Hello, Code School!'
 </h1>
 <ul>
 <li>I want to get PHP.</li>
