--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <title> Misha </title>
   </head>
   <body>
-<h1>
-"Hello, Code School!"
-</h1>
+<h1>Hello, Code School!</h1>
 <ul>
 <li>I want to get PHP.</li>
 <li>I want to learn SQL.</li>
